Retornos avanzados y arreglando errores en for in y acceso a modulos

--- a/Back/Web/html/index.html
+++ b/Back/Web/html/index.html
@@ -265,7 +265,7 @@
         //obtiene la cadena a imprimir en consola
         function getConsola() {
             var tabla;
-            alert("vino")
+            //alert("vino")
             var getCconsola = $.ajax({
                 url: 'http://127.0.0.1:3000/getConsola',
                 type: 'GET',
